# core-aws-authorizer

./: Cargo.toml
.github/workflows/: release.yml  tests.yml
infra/function/: samconfig.toml  template.yaml
infra/role/: samconfig.toml  template.yml
src/: auth_context.rs  claims.rs  handler.rs  iam.rs  iam_policy.rs  jwt.rs  jwt_service.rs  main.rs  payload.rs  put_object.rs  request.rs  response.rs  validate.rs
src/validate/: request_claims.rs  response_builder.rs  response_context.rs
tests/: sample_test.rs
