[package]
name = "authorizer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
aws_lambda_events = "0.15.0"
jwt-compact = "0.8.0"
lambda_runtime = "0.6.0"

serde = "1.0.136"
serde_json = "1.0.107"

tokio = { version = "1", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

