[package]
name = "authorizer"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = "0.15.0"
chrono = "0.4.35"
jwt-compact = {version = "0.8.0-beta.1", features = ["p256", "k256"] }
lambda_runtime = "0.10.0"

serde = "1.0.136"
serde_json = "1.0.115"

tokio = { version = "1", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

